--- a/css/homestyle.css
+++ b/css/homestyle.css
@@ -64,7 +64,7 @@ nav ul li a:hover {
 
 .carousel-image {
     width: 100%;
-    display: none; /* Hidden by default, shown by JS */
+    display: none;
 }
 
 footer {
