--- a/css/homestyle.css
+++ b/css/homestyle.css
@@ -1,21 +1,18 @@
 #carousel {
-  max-width: 60%; 
-  margin: 10px auto; 
+  max-width: 100%;
+  margin-top: 10px;
   position: relative;
   overflow: hidden;
 }
 
 .carousel-image {
   width: 100%;
-  max-height: 500px; 
-  object-fit: cover; 
-  display: none; 
-  position: absolute; 
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%); 
-  opacity: 0; 
+  display: block; 
   transition: opacity 0.5s ease-in-out; 
+  position: absolute; 
+  top: 0;
+  left: 0;
+  opacity: 0; 
 }
 
 
