fix image position

--- a/css/homestyle.css
+++ b/css/homestyle.css
@@ -11,7 +11,8 @@
   transition: opacity 0.5s ease-in-out; 
   position: absolute; 
   top: 0;
-  left: 0;
+  left: 50%;
+  transform: translateX(-50%);
   opacity: 0; 
 }
 
