--- a/css/homestyle.css
+++ b/css/homestyle.css
@@ -1,6 +1,6 @@
 #carousel {
   max-width: 60%;
-  margin-top: 10px;
+  margin: 10px auto;
   position: relative;
   overflow: hidden;
 }
@@ -10,9 +10,9 @@
   display: block; 
   transition: opacity 0.5s ease-in-out; 
   position: absolute; 
-  top: 0;
+  top: 50%;
   left: 50%;
-  transform: translateX(-50%);
+  transform: translate(-50%, -50%);
   opacity: 0; 
 }
 
