--- a/css/homestyle.css
+++ b/css/homestyle.css
@@ -10,7 +10,7 @@
   display: block; 
   transition: opacity 0.5s ease-in-out; 
   position: absolute; 
-  top: 50%;
+  top: 0;
   left: 50%;
   transform: translate(-50%, -50%);
   opacity: 0; 
