fix image issue again

--- a/css/homestyle.css
+++ b/css/homestyle.css
@@ -12,7 +12,7 @@
   position: absolute; 
   top: 0;
   left: 50%;
-  transform: translate(-50%, -50%);
+  transform: translate(-50%);
   opacity: 0; 
 }
 
