--- a/css/homestyle.css
+++ b/css/homestyle.css
@@ -45,3 +45,34 @@
   opacity: 0;
   visibility: hidden; 
 }
+
+
+@font-face {
+  font-family: "Nunito";
+  src: url(../fonts/Nunito/Nunito-VariableFont_wght.ttf) format('truetype');
+}
+
+
+body, h1, h2, h3, p, ul, li {
+  font-family: "Nunito", Arial, sans-serif;
+}
+
+h1 {
+  color: #2b6ca3; 
+}
+
+nav ul li a {
+  color: #333d9e; 
+}
+
+
+nav ul li a.active,
+nav ul li a:hover {
+  border-bottom: 3px solid #23527C;
+}
+
+
+footer {
+  background-color: #2b6ca3;
+  color: #ffffff;
+}
