--- a/css/homestyle.css
+++ b/css/homestyle.css
@@ -52,6 +52,9 @@
   src: url(../fonts/Nunito/Nunito-VariableFont_wght.ttf) format('truetype');
 }
 
+html{
+	font-family: "Nunitos", Times, sans-serif;
+}
 
 body, h1, h2, h3, p, ul, li {
   font-family: "Nunito", Arial, sans-serif;
@@ -65,14 +68,15 @@ nav ul li a {
   color: #333d9e; 
 }
 
-
 nav ul li a.active,
 nav ul li a:hover {
   border-bottom: 3px solid #23527C;
 }
 
-
 footer {
+  text-align: center;
+  padding: 2rem;
   background-color: #2b6ca3;
   color: #ffffff;
+  font-size: 1rem;
 }
