--- a/css/about.css
+++ b/css/about.css
@@ -1,59 +1,89 @@
 html{
 	font-family: "Nunitos", Arial, sans-serif;
 }
-
-.about-text{
+main {
+  padding: 20px;
+  margin: auto;
+  width: 100%;
+  max-width: 1200px;
+}
+.about-container{
   position: relative;
-  width: 800px;
-  height: 400px;
+  width: 100%;
+  overflow: hidden;
+  padding: 12px 0;
 }
 .gradient {
   height: 100%;
-  width: 150%;
-  position: absolute;
-  top: 0;
-  left:0;
-}
-.about-text img {
-  mask-image: linear-gradient(to right, transparent 0%, rgba(0,0,0,1) 95%, transparent 100%);
-  height: 100%;
   width: 100%;
   position: absolute;
-  left: 50%;
-  transform: translate(0%);
-  object-fit: cover;
+}
+.about-container img {
+  mask-image: linear-gradient(to right, transparent 0%, rgba(0,0,0,1) 99%, transparent 100%);
+  left:30%;
+  height: max-content;
+  position: absolute;
   z-index: -1;
 }
-.left-text {
-  position: absolute;
+.about-text {
+  position: relative;
   display:inline-block;
-  width: 80%;
-  top: 50%;
-  left: 16px;
-  transform: translate(0,-50%);
+  width: 60%;
+  text-wrap: wrap;
+  line-height: 16pt;
 }
 
+.about-text ul {
+  padding-left: 8px;
+  display: inline-block;
+  li::before {
+    content: "🌎 ";
+  }
+}
 
+#bottom {
+  width: 100%;
+  overflow: hidden;
+  position: relative;
+}
+#picture {
+  float: left;
+  width: 50%;
+}
+#picture img {
+  width: 100%;
+}
+#board {
+  margin-left: 50%;
+  position: relative;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
+#board #board-text {
+  text-align: right;
+  position: absolute;
+  top:50%;
+  height: 50%;
+}
 
-h1, h2, h3 {
+/* move to style.css later */
+h1, h2, h3, strong {
   font-weight: bold;
 }
-
 h1{
   font-size: 1.44em;
   color: #2b6ca3;
 }
-
 h2{
   font-size: 1.44em;
   color: #333d9e;
   position: relative;
 }
-
 h3 {
   font-size: 1.2em;
 }
-
-strong {
-  font-weight: bold;
+p {
+  font-size: 1em;
 }
