--- a/css/homestyle.css
+++ b/css/homestyle.css
@@ -91,7 +91,6 @@ p {
   font-size: 1em;
 }
 
-
 footer {
   text-align: center;
   padding: 2rem;
@@ -99,6 +98,22 @@ footer {
   color: #ffffff;
   font-size: 1rem;
   
+}
+
+.reach-us {
+  position: absolute;
+  bottom: 0;
+  right: 0;
+  margin: 10px;
+}
+
+.reach-us a {
+  display: inline-block;
+  margin-left: 10px;
+}
+
+.reach-us img {
+  width: 30px;
 }
 
 nav ul li a {
